--- a/MyWebsite.html
+++ b/MyWebsite.html
@@ -5,8 +5,8 @@
 <body class="view" id="here">
 <table>
 <tr>
-<th><a href=#here  style="text-decoration:none" class="up">Home</a></th>
-<th>Repositories</th>
+<th><a href=#here>Home</a></th>
+<th><a href="Repositories.html">Repositories</a></th>
 <th>Knowledge</th>
 <th>Interests</th>
 </tr>    
