--- a/MyWebsite.html
+++ b/MyWebsite.html
@@ -1,17 +1,26 @@
-<head>
-<link rel="stylesheet" href="help.css">
-<title>Morfiadakis Emmanouil Website</title>
-</head>
-<body class="view" id="here">
-<table>
-<tr>
-<th><a href=#here>Home</a></th>
-<th><a href="Repositories.html">Repositories</a></th>
-<th>Knowledge</th>
-<th>Interests</th>
-</tr>    
-</table>
-<img src="Myself.jpg" alt="Sorry">
-<p class="description">Hello my name is Morfiadakis Emmanouil.
-    I was born in 1997(Eventhough I seem younger).I live in Athens and I am studying at AUEB(Informatics)</p>
-</body>
+ <html>
+    <head id="here">
+        <link rel="stylesheet" href="help.css">
+        <title>Morfiadakis Emmanouil Website</title>
+    </head>
+    <body class="view">
+        <table>
+            <tr>
+                <th><a href=#here>Home</a></th>
+                <th><a href="Repositories.html">Repositories</a></th>
+                <th><a href="Knowledge.html">Knowledge</a></th>
+                <th><a href="Interests.html">Interests</a></th>
+            </tr>    
+        </table>
+        <img src="Myself.jpg" alt="Sorry" display="inline-block">
+        <p class="description">
+            Hello my name is Morfiadakis Emmanouil.
+            I was born in 1997(Eventhough I seem younger).I live in Athens and I am studying at AUEB(Informatics)
+        </p>
+        <h5>
+            Contact:
+            <a href="malito:manosmorf97@gmail.com">manosmorf97@gmail.com</a>
+        </h5>
+        
+    </body>
+</html>
