--- a/Repositories.html
+++ b/Repositories.html
@@ -1,16 +1,21 @@
-        <head>
-        <link rel="stylesheet" href="help.css">
-        <title>Morfiadakis Emmanouil Website</title>
+<html>
+        <head id="here">
+                <link rel="stylesheet" href="help.css">
+                <title>Morfiadakis Emmanouil Website</title>
         </head>
-        <body class="view" id="here">
-        <table>
-        <tr>
-        <th><a href="MyWebsite.html">Home</a></th>
-        <th><a href=#here>Repositories</a></th>
-        <th>Knowledge</th>
-        <th>Interests</th>
-        </tr>    
-        </table>
-        <p class="description">You can see most of my repositories <a href="https://github.com/ManosMorf22?tab=repositories">here.</a>
-        Also I took part in <a href="https://github.com/DrazorV/Team13-Nutrition">this </a>repository</p>
+        <body class="view" >
+                <table>
+                        <tr>
+                                <th><a href="MyWebsite.html">Home</a></th>
+                                <th><a href=#here>Repositories</a></th>
+                                <th><a href="Knowledge.html">Knowledge</a></th>
+                                <th><a href="Interests.html">Interests</a></th>
+                        </tr>    
+                </table>
+                <p class="description">You can see most of my repositories 
+                        <a href="https://github.com/ManosMorf22?tab=repositories" target="_blank">here.</a>
+                        Also I took part in 
+                        <a href="https://github.com/DrazorV/Team13-Nutrition" target="_blank">this </a>repository
+                </p>
         </body>
+</html>
