--- a/Knowledge.html
+++ b/Knowledge.html
@@ -16,7 +16,7 @@
             <li><h4>Languages:</h4>English,Greek</li>
             <li><h4>Applications:</h4>Microsoft Office(Very Good),Open Office(good)</li>
             <li><h4>Programing Languages:</h4>C++(very good),Java(very good),javascript(good),html(good),css(good),python(good),sql(good),markdown(good)</li>
-            <li><h4>Programming Enviroments:</h4>Visual Studio(Very Good),InteliJ(very good),Eclipse(very good),Anacoda(good),MySql(good)</li>    
+            <li><h4>Programming Enviroments:</h4>Visual Studio(Very Good),InteliJ(very good),Eclipse(very good),Android Studio(moderate),Anacoda(good),MySql(good)</li>    
         </ul>
 </body>
 </html>
