--- a/MyWebsite.html
+++ b/MyWebsite.html
@@ -15,7 +15,7 @@
         <img src="Myself.jpg" alt="Sorry" display="inline-block">
         <p class="description">
             Hello my name is Morfiadakis Emmanouil.
-            I was born in 1997(Eventhough I seem younger).I live in Athens and I am studying at AUEB(Informatics)
+            I was born in 1997(Eventhough I look younger).I live in Athens and I am studying at AUEB(Informatics)
         </p>
         <h5>
             Contact:
