--- a/Repositories.html
+++ b/Repositories.html
@@ -6,7 +6,7 @@
         <body class="view" >
                 <table>
                         <tr>
-                                <th><a href="MyWebsite.html">Home</a></th>
+                                <th><a href="Main_Page.html">Home</a></th>
                                 <th><a href=#here>Repositories</a></th>
                                 <th><a href="Knowledge.html">Knowledge</a></th>
                                 <th><a href="Interests.html">Interests</a></th>
