--- a/Main_Page.html
+++ b/Main_Page.html
@@ -1,7 +1,7 @@
  <html>
     <head id="here">
         <link rel="stylesheet" href="help.css">
-        <title>Morfiadakis Emmanouil Website</title>
+        <title>Morfiadakis Emmanouil Site</title>
     </head>
     <body class="view">
         <table>
