--- a/OpenMe/Interests.html
+++ b/OpenMe/Interests.html
@@ -16,6 +16,7 @@
              most of all I love:
             <ol>
                 <li>Solving Problems in order to create an app</li>
+				<li>Creating apps and websites</li>
                 <li>Making algorithms faster and/or with economy in variables</li>
                 <li>Artificial Inteligence</li>
                 <li>Approaching NP-Complete problems with Poly/time or Pseudopolionimal algorithms</li>
